remove old tutorials

--- a/hummuspy/examples/Tutorial_example_hummuspy.ipynb
+++ b/hummuspy/examples/Tutorial_example_hummuspy.ipynb
@@ -551,7 +551,7 @@
     "**It is defined together with eta**, depending of the regulations we want to study\n",
     "\n",
     "#### !! lamb[i, j], corresponds to the probability to jump from **j** to **i** !\n",
-    "It is thus normalized per columns"
+    "It is thus normalized per columns. You also need to have a bipartite to allows each non-zero value in lamb."
    ]
   },
   {
