--- a/vignettes/add_networks.Rmd
+++ b/vignettes/add_networks.Rmd
@@ -40,7 +40,8 @@ Additionally, it contains a motifs_db object, providing tf motifs informations, 
 # Load the Chen dataset, which is a Seurat object containing scRNA-seq and scATAC-seq data
 data("chen_dataset_subset")
 chen_dataset_subset
-hummus <- as(chen_dataset_subset, 'hummus_object')
+hummus <- InitiateHuMMuSObject(chen_dataset_subset)
+
 
 # wrapper of Signac::GetGRangesFromEnsDb, adapting output to UCSC format
 genome_annotations <- get_genome_annotations(
