--- a/vignettes/chen_vignette.Rmd
+++ b/vignettes/chen_vignette.Rmd
@@ -73,7 +73,7 @@ data("chen_dataset_subset")
 chen_dataset_subset
 
 # Create an hummus object from seurat object
-hummus <- InitiateHuMMuSObject(chen_dataset_subset)
+hummus <- Initiate_HuMMuS_Object(chen_dataset_subset)
 ```
   
 ### 1.2. Add genome and motif annotations to hummus object
@@ -193,8 +193,11 @@ hummus <- compute_tf_network(hummus,
                             tf_network_name = "TF_network")
 ```
 
-
 ### 2.4. Compute gene network from scRNA-seq w/ GENIE3
+### *!! This step can be very slow if you have thousands of cells !!*
+#### Current recommendation if you have a big dataset is to compute the network
+#### before with [GRNBoost2 thorugh arboreto](https://arboreto.readthedocs.io/en/latest/)
+#### and [add it to the hummus object afterwards](https://cantinilab.github.io/HuMMuS/articles/add_networks.html).
 Different methods can be used to compute the gene network. For now, only GENIE3
 is implemented in HuMMuS. You can specify which assay to use to compute the
 network (`gene_assay`).
