--- a/vignettes/chen_vignette.Rmd
+++ b/vignettes/chen_vignette.Rmd
@@ -50,7 +50,7 @@ devtools::install_github("cantinilab/HuMMuS", ref="dev_SeuratV5")
 library(reticulate)
 # install python dependency
 # reticulate::py_install("hummuspy", envname = "r-reticulate", pip=TRUE)
-reticulate::use_virtualenv("r-reticulate")
+reticulate::use_condaenv("r-reticulate")
 hummuspy <- reticulate::import("hummuspy")
 library(HuMMuS)
 ```
