--- a/vignettes/chen_vignette.Rmd
+++ b/vignettes/chen_vignette.Rmd
@@ -22,7 +22,7 @@ resource_files:
 
 *Documentation*: https://cantinilab.github.io/HuMMuS/
 
-```{r setup, include=FALSE}
+```{r setup, include=FALSE, eval=False}
 knitr::opts_chunk$set(eval = TRUE)
 devtools::install_github("cantinilab/HuMMuS", ref="dev_SeuratV5")
 ```
